Add proxy, 2 cols, websites, fix crash when no episodes

--- a/conf/config.sample.yml
+++ b/conf/config.sample.yml
@@ -9,3 +9,5 @@ url_title_map:
   Poputepipikku: "Pop Team Epic"
 # MAL API client ID, you can get one from https://myanimelist.net/apiconfig
 mal_client_id: "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+
+# proxy: https://user:password@host:port
